--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,14 @@
 /*___________________________________BODY_________________________________________*/
 body {
-	background-image: url("../img/ComputerImage.jpg");
-	background-size: 100%;
+	background-image: url("../img/computerimage.jpg");
+	background-size: cover;
 	}
 
-/*___________________________________TEXT_________________________________________*/
-/*________________HEADINGS______________*/
+html {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	}
+
+/*__________________________________HEADING_______________________________________*/
 
 h1 {
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -17,14 +20,12 @@ h1 {
 	}
 
 h2 {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 30px;
 	color: Black;
 	padding-left: 50px;
 	padding-right: 15px;
 	}
 h3 {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 25px;
 	color: RGB(43, 139, 161);
 	padding-left: 15px;
@@ -34,21 +35,26 @@ h3 {
 	}
 
 h4 {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 20px;
 	color: Black;
 	padding-left: 15px;
 	padding-right: 15px;
 	text-align: left;
+	padding-left: 50px;
+	}
 
-	
+h5 {
+	font-size: 25px;
+	color: Black;
+	padding-left: 15px;
+	padding-right: 15px;
+	text-align: center;
 	}
 
 	
-/*_____________PARAGRAPH____________*/
+/*______________________________PARAGRAPH___________________________*/
 
 p {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 20px;
 	text-align: justify;
 	padding-left: 50px;
@@ -57,7 +63,6 @@ p {
 	}
 
 p.important {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 17px;
 	text-align: justify;
 	padding-left: 15px;
@@ -67,9 +72,7 @@ p.important {
 	color: #029783;
 	}
 
-
 p.heading {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 17px;
 	text-align: center;
 	padding-left: 50px;
@@ -79,25 +82,23 @@ p.heading {
 
 	}
 
-.clearing {
-	clear: both;
-	}
-
 p.small {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 12px;
 	}
 
 p.notation {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 15px;
 	text-align: center;
+	}
+
+p.infinity {
+	font-size: 20px;
+	color: RGB(69, 200, 207);
 	}
 	
 /*________________________________LISTS________________________________________*/
 
 ul.square {
-	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 20px;
 	text-align: justify;
 	padding-left: 75px;
@@ -108,9 +109,6 @@ ul.square {
 li {
 	margin: 10px;
 	}
-/*--you can also use a photo for the bullet points by using ul 
-{list-style-image:url("file"); list-style-position: inside; --*/
-
 
 /*__________________________LINKS_______________________________________________*/
 
@@ -127,164 +125,79 @@ a:hover{
 /*______________________________________IMAGES______________________________________*/
 
 #mainLogo {
-	width: 300px;
-	margin: auto;
+	max-width: 43%;
+	float: left;
+	margin: 0px 5px 10px 5px;
 	}
 
 #texas {
 	float: right;
-	width: 30%;
 	padding: 10px;
 	margin-left: 10px;
 	position: relative;
+	max-width: 40%;
 	}
 
 #portrait {
 	float: left;
-	width: 300px;
-	height: 300px;
-	margin-right: 15px;
-	}
-#ChoicePic {
-	float: left;
-	width: 300px;
-	height: 200px;
-	margin: 0px 20px 20px 10px;
-	}
-	
-	
-/*________________________________________BOXES______________________________________*/
-
-.BoxLeft {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 17px;
-	text-align: justify;
-	width: 50%;
-	padding: 15px;
-	background-color: white;
-    	border: 20px solid RGB(69, 200, 207);
-	margin-left: 100px;
-	margin-right: 100px;
-	}
-
-.BoxRight1 {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 30px;
-	text-align: center;
-	width: 200px;
-	padding: 15px;
-	background-color: RGB(69, 200, 207);
-	border: 5px solid lightGray;
-	float: left;
-	margin-left: 37%;
-	margin-top: -250px;
-	position: absolute;
-	font-style: italic;
-	}
-
-.BoxRight2 {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 30px;
-	text-align: center;
-	width: 200px;
-	padding: 15px;
-	background-color: RGB(69, 200, 207);
-	border: 5px solid lightGray;
-	float: left;
-	margin-left: 37%;
-	margin-top: -140px;
-	position: absolute;
-	font-style: italic;
-	}
-
-.BoxRight3 {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 30px;
-	text-align: center;
-	width: 200px;
-	padding: 15px;
-	background-color: RGB(69, 200, 207);
-	border: 5px solid lightGray;
-	float: left;
-	margin-left: 37%;
-	margin-top: -85px;
-	position: absolute;
-	font-style: italic;
-	}
-
-.aLaCarte {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 17px;
-	text-align: justify;
-	width: 65%;
-	padding: 5px;	
-	font-style: italic;
+	max-width: 100%;
+	margin-right: 10px;
 	margin-bottom: 10px;
-	background-color: white;
-    	border: 15px solid RGB(69, 200, 207);
-	margin-left: 100px;
-	margin-right: 100px;
 	}
-
-#BetterMargins {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 17px;
-	text-align: justify;
-	padding: 5px;
-	background-color: white;
-	margin-right: 300px;
-	margin-left: 300px;
-	margin-top: 10px;
-	border: 2px solid LightGray;
-	}
-
-.HeadingBox {
-	width: 500px;
-	height: 80px;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 50px;
-	color: RGB(69, 200, 207);
-	padding: 10px;
-	text-align: center;
-	background-color: white;
-	border-style: double;
-	margin: auto;
-	
-	}
-
-.Infinity {
-	top: 0px;
-	left: 10px;
-	font-size: .5em;
-	background: white;
-	position: relative;
-
-}
-.ChoiceBoxContainer {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 17px;
-	text-align: justify;
-	padding: 5px;
-	background-color: white;
-	margin-right: 300px;
-	margin-left: 300px;
-	margin-top: 10px;
-	border: 2px solid LightGray;
-	height: 450px;
-	}
-	
-
-.ChoiceBoxP {
-	Background-color: lightGray;
-	Width: 300px;
-	Height: 212px;
-	Margin: 10px 40px 10px 40px;
+.ChoicePic {
 	float: left;
-	text-align: center;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 17px;
-	opacity: 1;
+	max-width: 100%;
+	float: center;
 	position: relative;
+	}
+	
+/*________________________________________COLUMNS______________________________________*/
+* {
+    box-sizing: border-box;
+	}
+
+[class*="col-"] {
+	float: left;
+	padding: 15px;
+	
+	}
+	.col-0 {width: 4.16%}
+	.col-1 {width: 8.33%;}
+	.col-2 {width: 16.66%;}
+	.col-3 {width: 25%;}
+	.col-4 {width: 33.33%;}
+	.col-5 {width: 41.66%;}
+	.col-6 {width: 50%;}
+	.col-7 {width: 58.33%;}
+	.col-8 {width: 66.66%;}
+	.col-9 {width: 75%;}
+	.col-10 {width: 83.33%;}
+	.col-11 {width: 91.66%;}
+	.col-12 {width: 100%;}
+
+.row::after {
+	content: "";
+	clear: both;
+	display: table;
+	}
+/*________________________________________BOX FORMATS______________________________________*/
+.Heading {
+	background-color: white;
+	border: 5px double RGB(69,200,207);
+	}
+.Body {
+	background-color: white;
+	border: 5px solid #ddd;
+	}
+
+.Blu {
+	background-color: white;
+	border: 5px solid RGB(69,200,207);
+	}
+
+.Pack {
+	background-color: white;
+	border: 8px solid RGB(69, 200, 207);
 	}
 
 /*____________________________________Top Navigation...Again____________________________________*/
@@ -370,7 +283,7 @@ a:hover{
 
 .ServNav{
 	width: 450px;
-	height: 300px;
+	height: 350px;
 	float: right;
 	background-color: black;
 	padding-top: 16px;
@@ -425,37 +338,3 @@ hr.style-one:after {
     padding: 0 0.25em;
     background: white;
 }
-
-/*___________________________________Form_________________________________________*/
-
-form {
-    	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 20px;
-	margin: 30px 70px 10px;
-	border: 3px solid RGB(69,200, 207);
-	padding: 15px;
-
-	}
-
-input[type=text], input[type=tel], input[type=email] {
-    	font-family: Georgia, "Times New Roman", Times, serif;
-	border: 1px solid black;
-	margin:10px 0px 20px 10px;
-	width: 300px;
-	height: 30px;
-	font-size: 20px;
-	}
-
-input[type=text]:focus, input[type=tel]:focus, input[type=email]:focus {
-	border: 2px solid RGB(69, 200, 207)
-	}
-
-input[type=submit] {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	margin:10px 0px 20px 0px;
-	width: 150px;
-	height: 40px;
-	font-size: 20px;
-	background-color: RGB(69,200,207);
-	border: 1px solid lightGray;
-	}
