--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /*___________________________________BODY_________________________________________*/
 body {
-	background-image: url("../img/computerimage.jpg");
+	background-image: url("../img/ComputerImage.jpg");
 	background-size: cover;
 	}
 
