--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,11 @@ html {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	}
 
-@-ms-viewport{
-  width: device-width;
-}
-
 /*__________________________________HEADING_______________________________________*/
 
 h1 {
 	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 20px;
+	font-size: 3vw;
 	color: RGB(69, 200, 207);
 	padding-left: 15px;
 	padding-right: 15px;
@@ -24,13 +20,13 @@ h1 {
 	}
 
 h2 {
-	font-size: 16px;
+	font-size: 1.5vw;
 	color: Black;
-	padding-left: 50px;
-	padding-right: 15px;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
 	}
 h3 {
-	font-size: 14px;
+	font-size: 25px;
 	color: RGB(43, 139, 161);
 	padding-left: 15px;
 	padding-right: 15px;
@@ -39,7 +35,7 @@ h3 {
 	}
 
 h4 {
-	font-size: 14px;
+	font-size: 20px;
 	color: Black;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -48,7 +44,7 @@ h4 {
 	}
 
 h5 {
-	font-size: 14px;
+	font-size: 25px;
 	color: Black;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -59,38 +55,36 @@ h5 {
 /*______________________________PARAGRAPH___________________________*/
 
 p {
-	font-size: 14px;
+	font-size: 1vw;
 	text-align: justify;
-	padding-left: 50px;
-	padding-right: 50px;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
 	color: Black;
 	}
 
 p.important {
-	font-size: 14px;
+	font-size: 1vw;
 	text-align: justify;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
 	font-weight: bold;
 	font-style: italic;
 	color: #029783;
 	}
 
-
 p.small {
-	font-size: 10px;
+	font-size: .5px;
 	}
 
 p.notation {
-	font-size: 14px;
+	font-size: 1vw;
 	text-align: center;
 	}
-
 	
 /*________________________________LISTS________________________________________*/
 
 ul.square {
-	font-size: 14px;
+	font-size: 20px;
 	text-align: justify;
 	padding-left: 75px;
 	padding-right: 15px;
@@ -137,21 +131,37 @@ a:hover{
 	}
 .ChoicePic {
 	float: left;
-	max-width: 100%;
 	float: center;
 	position: relative;
+	max-width: 100%;
 	}
 	
 /*________________________________________COLUMNS______________________________________*/
-* {
-    box-sizing: border-box;
-	}
 
+/* For mobile phones: */
 [class*="col-"] {
+    width: 100%;
 	float: left;
 	padding: 15px;
-	
-	}
+	border: 2px solid red;
+}
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
 	.col-0 {width: 4.16%}
 	.col-1 {width: 8.33%;}
 	.col-2 {width: 16.66%;}
@@ -172,6 +182,11 @@ a:hover{
 	display: table;
 	}
 /*________________________________________BOX FORMATS______________________________________*/
+* {
+    box-sizing: border-box;
+	}
+
+
 .Heading {
 	background-color: white;
 	border: 5px double RGB(69,200,207);
@@ -184,6 +199,7 @@ a:hover{
 .Blu {
 	background-color: white;
 	border: 5px solid RGB(69,200,207);
+	padding: 0px 0px 0px 0px;
 	}
 
 .Pack {
@@ -329,3 +345,5 @@ hr.style-one:after {
     padding: 0 0.25em;
     background: white;
 }
+
+
