--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,7 @@ hr.style-one:after {
 .header {
 	height: 30px;
 	width: 95%;
-	margin-left:50px;
+	margin: auto;
 	margin-bottom: 3px;
 	margin-top: 3px;
   }
@@ -374,7 +374,9 @@ hr.style-one:after {
 	}
 }
 
-
+p {
+	font-size: 2vw;
+}
 
 
 
