--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,6 @@ body {
 	border: .3vw solid RGB(69,200,207);
 	margin: .5vw .5vw .5vw .5vw;
 	padding: .5vw .5vw .5vw .5vw;
-	max-width: 80%;
 	display: block;
 }
 
@@ -95,7 +94,7 @@ body {
 .package {
 	display: block;
 	background-color: white;
-	border: 8px solid RGB(69, 200, 207);
+	border: 1vw solid RGB(69, 200, 207);
         box-sizing: border-box;
 	padding-top: .5vw;
 	}
@@ -112,6 +111,7 @@ h1 {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-top: 10px;
+	text-align: center;
 	}
 
 h2 {
@@ -336,7 +336,6 @@ hr.style-one:after {
 
 /*----------------------------Screen Sizing --------------------------------*/
 
-
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
 .header {
@@ -344,7 +343,7 @@ hr.style-one:after {
 	width: 95%;
 	margin: auto;
 	margin-bottom: 3px;
-	margin-top: 3px;
+
   }
 
 .feature-1, .feature-2, .feature-3 {
@@ -365,33 +364,53 @@ hr.style-one:after {
 .Scontent {
 	width: 95%;
 	margin: auto;
-	margin-top: .25vw;
-	margin-bottom: .25vw;
 	}
 
 .package {
 	margin: 1vw 1vw 1vw .5vw;
 	}
 
-p {
-	font-size: 2vw;
-	}
-}
 
+p, ul, li {
+	font-size: 2.3vw;
+	}
+h1 {
+	font-size: 3.4vw;
+	}
+h2 {
+	font-size: 2.6vw;
+	}
+
+p.small {
+	font-size: 1.5vw;
+	}
+p.important {
+	font-size: 2.5vw;
+	}
+
+.servs {
+	font-size: 2.3vw;
+	margin: auto;
+	margin-top: 1vw;
+	border: .7vw solid RGB(69,200,207);
+	width: 90%;
+	}
+
+}
 
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
 .header {
 	height: 60px;
-	width: 95%;
+	width: 70%;
 	margin: auto;
 	margin-bottom: .5vw;
 	margin-top: .5vw;
   }
 
 .feature-1, .feature-2, .feature-3 {
-	width: 60%;
+	width:55%;
 	height: 20%;
 	margin: auto;
 	margin-bottom: .5vw;
@@ -402,14 +421,42 @@ p {
 	margin: auto;
 	margin-top: .25vw;
 	margin-bottom: .25vw;
+
 	}
 
 .Scontent {
 	width: 95%;
 	margin: auto;
 	}
+
 .package {
 	margin: 1vw 1vw 1vw .5vw;
+	border: .7vw solid RGB(69, 200, 207);	
+	}
+
+.servs {
+	margin: auto;
+	margin-top: 1vw;
+	border: .7vw solid RGB(69, 200, 207);
+	width: 90%;
+	}
+
+p, ul, li {
+	font-size: 2vw;
+	}
+p.important {
+	font-size: 2.1vw;
+	}
+
+h2 {
+	font-size: 2.5vw;
+	}
+h1 {
+	font-size: 4vw;
+	}
+
+p.small {
+	font-size: 1.7vw;
 	}
 }
 
@@ -418,36 +465,42 @@ p {
 @media only screen and (min-width: 961px) {
 
 .feature-1, .feature-2, .feature-3 {
-	width: 30%;
-	margin-left: 2.2vw;
+	width: 20%;
+  	}
+
+.feature-1 {
+	margin-left: 18vw;
+
   	}
 
 .header {
 	height: 150px;
-	width: 70%;
-	margin: auto;
+	width: 50%;
+	margin-left: 25vw;
+	margin-right: 25vw;
 	margin-bottom: .5vw;
 	margin-top: 1vw;
   	}
 
 .content {
-	width: 95%;
+	width: 75%;
 	margin: auto;
 	margin-top: .25vw;
 	margin-bottom: .25vw;
 	}
 
 .Scontent {
-	width: 95%;
+	width: 52%;
 	margin: 1vw 1vw 1vw 5vw;
 	}
 
 .package {
-	margin: 1vw 1vw 1vw 5vw;
+	margin: 1vw 5vw 1vw 5vw;
 	}
 
 .servs {
 	margin-top: 1vw;
+	width: 80%;
 	}
 
 }
