--- a/css/main.css
+++ b/css/main.css
@@ -80,9 +80,7 @@ body {
 	float: left;
 	}
 
-.navMenu {
-	float: right;
-	}
+
 
 .package {
 	display: block;
@@ -300,16 +298,16 @@ hr.style-one:after {
 	background-color: #f9f9f9;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
+    	min-width: 160px;
 	}
 
 .dropdown-content a {
 	float: none;
 	color: black;
-	padding: 12px 16px 5px 16px;
+	padding: 12px 50px 5px 50px;
 	text-decoration: none;
 	display: block;
 	text-align: left;
-	min-width: 160px;
 	}
 
 .dropdown-content a:hover {
@@ -329,7 +327,8 @@ hr.style-one:after {
 	height: 30px;
 	width: 95%;
 	margin: auto;
-	margin-bottom: 3px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 
   }
 
@@ -388,14 +387,16 @@ p.important {
 	background-color: white;
 	height: 15vw;
 	border: .3vw solid dimGray;
+	margin-bottom: 1vw;
 	}	
 
 
 .dropdown .dropbtn {
  	font-size: 5vw; 
+	margin-top: 3vw;
 	}
 
-.navMenu {
+.dropdown {
 	height: 14vw;
 	margin-right: 3vw;
 	width: 25vw;
@@ -424,6 +425,7 @@ p.important {
 	width: 70%;
 	margin: auto;
 	margin-bottom: .5vw;
+	margin-top: .5vw;
 	margin-top: .5vw;
   }
 
@@ -484,17 +486,20 @@ p.small {
 	border: .3vw solid dimGray;
 	}	
 
+.dropdown {
+	overflow: hidden;
+	background-color: white;
+	height: 15vw;
+	border: .3vw solid dimGray;
+
+	}
+
 
 .dropdown .dropbtn {
  	font-size: 5vw; 
+	margin-top: 3vw;
 	}
 
-.navMenu {
-	height: 14vw;
-	margin-right: 3vw;
-	width: 25vw;
-
-	}
 
 .logo {
 	width: 35vw;
@@ -560,14 +565,10 @@ p.small {
 	}
 
 .dropdown .dropbtn {
- 	font-size: 1.7vw; 
+ 	font-size: 1.7vw;
+	margin-top: 2.2vw;
 	}
 
-.navMenu {
-	height: 7vw;
-	margin-right: 3vw;
-	width: 10vw;
-	}
 
 .logo {
 	width: 15vw;
@@ -578,6 +579,12 @@ p.small {
 
 .dropdown-content {
 	font-size: 1.3vw;
+	}
+
+.dropdown {
+	height: 7vw;
+	margin-right: 3vw;
+	width: 10vw;
 	}
 
 }
