--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,15 @@ body {
 
 .header {
 	background-color: white;
-	border: .3vw double RGB(69,200,207);
+	border: none;
 	padding: 20px 10px 20px 10px;
-	}
-
+	height: 60px;
+	width: 100%;
+	margin: auto;
+	margin-bottom: .5vw;
+	margin-top: .5vw;
+	margin-top: .5vw;
+  }
 .content {
 	display: block;
 	background-color: white;
@@ -47,19 +52,33 @@ body {
 .Scontent {
 	display: block;
 	height: auto;
-	padding: 20px 10px 20px 10px;
+	width: 100%;
+	text-align: center;
+	font-size: 10vw;
+	background-color: #ddd;
+	padding: 10px 0px 0px 0px;
 	}
 
 .feature-1 {
 	background-color: white;
 	border: .3vw solid RGB(69,200,207);
 	margin: .5vw .5vw .5vw .5vw;
+	width: 100%;
+	margin: auto;
+	height: 10%;
+	margin-bottom: 3px;
+	margin-top: 3px;
 }
 
 .feature-2 {
 	background-color: white;
 	border: .3vw solid RGB(69,200,207);
 	margin: .5vw .5vw .5vw .5vw;
+	width: 100%;
+	margin: auto;
+	height: 10%;
+	margin-bottom: 3px;
+	margin-top: 3px;
 }
 
 .feature-3 {
@@ -74,22 +93,98 @@ body {
 	margin: .5vw .5vw .5vw .5vw;
 	padding: .5vw .5vw .5vw .5vw;
 	display: block;
+	font-size: 2.3vw;
+	margin: auto;
+	margin-top: 1vw;
+	border: .7vw solid RGB(69,200,207);
+	width: 90%;
 }
+
 
 .logo {
 	float: left;
 	}
 
-
-
 .package {
-	display: block;
 	background-color: white;
-	border: 1vw solid RGB(69, 200, 207);
-        box-sizing: border-box;
-	padding-top: .5vw;
+	border-top: 5px solid RGB(69, 200, 207);
+	border-bottom: 5px solid RGB(69, 200, 207);
+	display: block;
+	height: auto;
+	padding: 10px 5px 10px 5px;
 	}
 
+.mobile-1 {
+	background-color: RGB(69, 200, 207);
+	font-size: 5.5vw;
+	font-weight: bold;
+	color: black;
+	height: auto;
+	text-align: center;
+	padding: 15px 15px 15px 15px;
+	border-bottom: 5px solid black;
+	display: block;
+	}
+
+.mobile-2 {
+	display: block;
+	background-color: Black;
+	font-size: 4vw;
+	color: white;
+	height: auto;	
+	text-align: justify;
+	padding: 15px 15px 15px 15px;
+	}
+
+.mobile-3 {
+	background-color: #ddd;
+	font-size: 4vw;
+	color: black;
+	height: auto;	
+	text-align: center;
+	padding: 15px 15px 15px 15px;
+	border-top: 6px solid white;
+	border-bottom: 6px solid white;
+	display: block;
+	}
+
+.mobile-4 {
+	background-color: #ddd;
+	font-size: 4vw;
+	color: black;
+	height: auto;	
+	text-align: center;
+	padding: 15px 15px 15px 15px;
+	border-top: 6px solid white;
+	border-bottom: 6px solid white;
+	display: block;
+	}
+
+
+/*container for mobile pics, not the actual pictures */
+
+.mobile-pic {
+	background-color: RGB(69, 200, 207);
+	font-size: 5.5vw;
+	font-weight: bold;
+	color: black;
+	height: auto;
+	text-align: center;
+	padding: 15px 15px 15px 15px;
+	border-bottom: 5px solid black;
+	}
+
+footer {
+	background-color: black;
+	height: 15px;
+	display: block;
+	color: white;
+	font-size: 4vw;
+	width: 100%;
+	height: auto;
+	padding: 15px 15px 15px 15px;
+	text-align: center;
+	}
 	
 /*------------------------Headers and Paragraphs----------------------------*/
 
@@ -97,35 +192,35 @@ body {
 
 h1 {
 	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 3vw;
+	font-size: 6.5vw;
 	color: RGB(69, 200, 207);
 	padding-left: 15px;
 	padding-right: 15px;
-	margin-top: 10px;
+	margin-top: 10px; 
 	text-align: center;
 	}
 
 h2 {
-	font-size: 1.5vw;
-	color: Black;
+	font-size: 4vw;
+	color: black;
 	padding-left: 1.5vw;
 	padding-right: 1.5vw;
 	margin-bottom: 1.5vw;
 	}
+
 h3 {
-	font-size: 1.5vw;
-	color: RGB(43, 139, 161);
-	padding: .5vw .5vw .5vw .5vw;
+	font-size: 5.5vw;
+	color: white;
 	text-align: center;
-	text-decoration: underline;
+	text-shadow: 2px 2px 10px black;
 	}
 
 h4 {
-	font-size: 1.2vw;
+	font-size: 3vw;
 	color: Black;
 	padding-left: 2vw;
 	padding-right: 15px;
-	text-align: left;
+	text-align: center;
 	}
 
 h5 {
@@ -136,10 +231,11 @@ h5 {
 	text-align: center;
 	}
 
+
 /*___________________________Paragraphs_____________________________________*/
 
 p {
-	font-size: 1vw;
+	font-size: 4vw;
 	text-align: justify;
 	padding-left: 1.5vw;
 	padding-right: 1.5vw;
@@ -156,24 +252,22 @@ p.important {
 	}
 
 p.small {
-	font-size: .7vw;
+	font-size: 1.5vw;
 	}
-
-p.pricing {
-	font-size: 1vw;
-	text-align: center;
+p.important {
+	font-size: 2.5vw;
 	}
 
 /*------------------------------Lists--------------------------------------*/
 
 ul {
-	font-size: 1vw;
+	font-size: 4vw;
 	text-align: justify;
 	padding-left: 5%;
 	}
 
 ul.square {
-	font-size: 1vw;
+	font-size: 4vw;
 	text-align: justify;
 	padding-left: 10%;
 	list-style-type: square;
@@ -181,7 +275,7 @@ ul.square {
 
 li {
 	margin: 10px;
-	font-size: 1vw;
+	font-size: 4vw;
 	}
 
 /*------------------------------LINKS--------------------------------------*/
@@ -213,7 +307,7 @@ img {
 	padding: 10px;
 	margin-left: 10px;
 	position: relative;
-	max-width: 20%;
+	max-width: 30%;
 	}
 
 .portrait {
@@ -228,11 +322,21 @@ img {
 	display: block;
     	margin-left: auto;
     	margin-right: auto;
-	width: 25vw;
+	max-width: 50%;
 	position: relative;
 	}
 
+.MobilePics {
+	box-shadow: 2px 2px 20px black;
+	}
 
+
+
+.DesktopPics {
+	float: left;
+	width: 50%;
+	padding-right: 15px;
+	}
 /*_________________________________HR______________________________________*/
 
 hr.style-eight {
@@ -252,6 +356,7 @@ hr.style-one {
 	color: #333;
 	text-align: center;
 	clear: left;
+	clear: right;
 }
 
 
@@ -323,71 +428,22 @@ hr.style-one:after {
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
-.header {
-	height: 30px;
-	width: 95%;
-	margin: auto;
-	margin-bottom: 5px;
-	margin-top: 5px;
 
-  }
-
-.feature-1, .feature-2, .feature-3 {
-	width: 60%;
-	margin: auto;
-	height: 10%;
-	margin-bottom: 3px;
-	margin-top: 3px;
-  }
-.content {
-	width: 95%;
-	margin: auto;
-	margin-top: .25vw;
-	margin-bottom: .25vw;
-	margin-left: 2vw;
-	}
-
-.Scontent {
-	width: 95%;
-	margin: auto;
-	}
-
-.package {
-	margin: 1vw 1vw 1vw .5vw;
+.feature-3 {
+	display: none;
 	}
 
 
-p, ul, li {
-	font-size: 2.3vw;
-	}
-h1 {
-	font-size: 3.4vw;
-	}
-h2 {
-	font-size: 2.6vw;
+.DesktopPics {
+	display: none;
 	}
 
-p.small {
-	font-size: 1.5vw;
-	}
-p.important {
-	font-size: 2.5vw;
-	}
-
-.servs {
-	font-size: 2.3vw;
-	margin: auto;
-	margin-top: 1vw;
-	border: .7vw solid RGB(69,200,207);
-	width: 90%;
-	}
 
 .navbar {
 	overflow: hidden;
 	background-color: white;
 	height: 15vw;
 	border: .3vw solid dimGray;
-	margin-bottom: 1vw;
 	}	
 
 
@@ -422,12 +478,15 @@ p.important {
 @media only screen and (min-width: 401px) and (max-width: 960px) {
 .header {
 	height: 60px;
-	width: 70%;
+	width: 100%;
 	margin: auto;
 	margin-bottom: .5vw;
 	margin-top: .5vw;
-	margin-top: .5vw;
   }
+
+.DesktopPics {
+	display: none;
+	}
 
 .feature-1, .feature-2, .feature-3 {
 	width:55%;
@@ -436,13 +495,6 @@ p.important {
 	margin-bottom: .5vw;
   	}
 
-.content {
-	width: 95%;
-	margin: auto;
-	margin-top: .25vw;
-	margin-bottom: .25vw;
-
-	}
 
 .Scontent {
 	width: 95%;
@@ -450,7 +502,6 @@ p.important {
 	}
 
 .package {
-	margin: 1vw 1vw 1vw .5vw;
 	border: .7vw solid RGB(69, 200, 207);	
 	}
 
@@ -461,19 +512,13 @@ p.important {
 	width: 90%;
 	}
 
-p, ul, li {
-	font-size: 2vw;
-	}
+
 p.important {
 	font-size: 2.1vw;
 	}
 
-h2 {
-	font-size: 2.5vw;
-	}
-h1 {
-	font-size: 4vw;
-	}
+
+
 
 p.small {
 	font-size: 1.7vw;
@@ -490,8 +535,6 @@ p.small {
 	overflow: hidden;
 	background-color: white;
 	height: 15vw;
-	border: .3vw solid dimGray;
-
 	}
 
 
@@ -520,6 +563,8 @@ p.small {
 
 .feature-1, .feature-2, .feature-3 {
 	width: 20%;
+	margin: 0px;
+	margin: 15px 10px 15px 10px;
   	}
 
 .feature-1 {
@@ -528,12 +573,13 @@ p.small {
   	}
 
 .header {
-	height: 150px;
+	height: auto;
 	width: 50%;
 	margin-left: 25vw;
 	margin-right: 25vw;
 	margin-bottom: .5vw;
 	margin-top: 1vw;
+	border: 4px double RGB(69, 200, 207);
   	}
 
 .content {
@@ -544,18 +590,21 @@ p.small {
 	}
 
 .Scontent {
-	width: 52%;
-	margin: 1vw 1vw 1vw 5vw;
+	display: none;
 	}
 
 .package {
-	margin: 1vw 5vw 1vw 5vw;
+	border: 1vw solid RGB(69, 200, 207);
+	margin-left: 3vw;
+	width: 60%
 	}
 
 .servs {
-	margin-top: 1vw;
+	margin: 1vw .5vw .5vw .5vw;
+	padding: .5vw .5vw .5vw .5vw;
 	width: 80%;
 	}
+
 
 .navbar {
 	overflow: hidden;
@@ -587,6 +636,118 @@ p.small {
 	width: 10vw;
 	}
 
+.mobile-1 {
+	display: none;
+	}
+
+.mobile-2 {
+	font-size: 1.5vw;
+	width: 75%;
+	margin: auto;
+	margin-top: .25vw;
+	margin-bottom: .25vw;
+	border: 2px solid #ddd;
+	background-color: white;
+	color: black;
+	padding: 20px 10px 20px 10px;
+	font-size: 1.2vw;
+	text-align: justify;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
+	color: Black;
+	}
+
+.mobile-3 {
+	font-size: 1.5vw;
+	width: 75%;
+	margin: auto;
+	margin-top: .25vw;
+	margin-bottom: .25vw;
+	border: 2px solid #ddd;
+	background-color: RGB(69, 200, 207);
+	color: black;
+	font-size: 1.2vw;
+	}
+
+.mobile-4 {
+	width: 60%;
+	background-color: inherit;
+	border: none;
+	margin-top: 10px;
+	}
+
+
+.SelectPic {
+	max-width: 100%;
+	}
+
+.MobilePics {
+	max-width: 50%;
+	}
+
+footer {
+	height: auto;
+	color: white;
+	font-size: 1vw;
+	}
+h1 {
+	font-size: 3vw;
+	}
+
+h2 {
+	font-size: 1.5vw;
+	color: black;
+	text-shadow: none;
+	text-align: left;
+	margin-left: 1.5vw;
+
+	}
+h3 {
+	font-size: 1.5vw;
+	color: Black;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
+	margin-bottom: 1.5vw;
+	text-align: left;
+	text-shadow: none;
+	}
+h4 {
+	font-size: 1.2vw;
+	text-align: left;
+	margin-left: 1.5vw;
+	}
+
+p, ul, li {
+	font-size: 1.2vw;
+	text-align: justify;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
+	color: Black;
+	}
+
+p.important {
+	font-size: 1vw;
+	text-align: justify;
+	padding: .5vw 1.5vw .5vw 1.5vw;
+	font-weight: bold;
+	font-style: italic;
+	color: #029783;
+	}
+
+p.small {
+	font-size: .7vw;
+	}
+
+p.pricing {
+	font-size: 1vw;
+	text-align: center;
+	}
+
+
+.mobile-pic {
+	display: none;
+	}
+	
 }
 
 
