--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,8 @@ body {
 
 /*------------------Section Formatting-------------------------*/
 
+/*___________________Elements_________________________________*/
+
 .section {
 	width: 100%;
 	height: auto;
@@ -39,8 +41,82 @@ body {
 	margin: auto;
 	margin-bottom: .5vw;
 	margin-top: .5vw;
-	margin-top: .5vw;
-  }
+  	}
+
+
+footer {
+	background-color: black;
+	height: 15px;
+	display: block;
+	color: white;
+	font-size: 4vw;
+	width: 100%;
+	height: auto;
+	padding: 15px 15px 15px 15px;
+	text-align: center;
+	}
+
+
+.content-area {
+   	display: flex;
+	}
+    
+.site-main {
+	width: 75%;
+    	}
+
+.sidebar-area {
+    	background-color: #ddd;
+    	position: relative;
+    	width: 23vw;
+	border-right: 2vw solid black;
+	}
+
+/*___________________Features_______________________________*/
+
+.feature-1 {
+	background-color: white;
+	border: .3vw solid RGB(69,200,207);
+	margin: .5vw .5vw .5vw .5vw;
+	width: 100%;
+	margin: auto;
+	height: 10%;
+	margin-bottom: 3px;
+	margin-top: 3px;
+	}
+
+.feature-2 {
+	background-color: white;
+	border: .3vw solid RGB(69,200,207);
+	margin: .5vw .5vw .5vw .5vw;
+	width: 100%;
+	margin: auto;
+	height: 10%;
+	margin-bottom: 3px;
+	margin-top: 3px;
+	}
+
+.feature-3 {
+	background-color: white;
+	border: .3vw solid RGB(69,200,207);
+	margin: .5vw .5vw .5vw .5vw;
+	}
+
+.feature-4 {
+	background-color: white;
+	border: 1vw double  RGB(69,200,207);
+	margin-bottom: 1vw;
+	height: auto;
+	font-size: 7vw;
+	padding: 5vw;
+	}
+
+
+
+
+/*_____________________Blocks______________________________*/
+
+
 .content {
 	display: block;
 	background-color: white;
@@ -58,33 +134,6 @@ body {
 	padding: 10px 0px 0px 0px;
 	}
 
-.feature-1 {
-	background-color: white;
-	border: .3vw solid RGB(69,200,207);
-	margin: .5vw .5vw .5vw .5vw;
-	width: 100%;
-	margin: auto;
-	height: 10%;
-	margin-bottom: 3px;
-	margin-top: 3px;
-}
-
-.feature-2 {
-	background-color: white;
-	border: .3vw solid RGB(69,200,207);
-	margin: .5vw .5vw .5vw .5vw;
-	width: 100%;
-	margin: auto;
-	height: 10%;
-	margin-bottom: 3px;
-	margin-top: 3px;
-}
-
-.feature-3 {
-	background-color: white;
-	border: .3vw solid RGB(69,200,207);
-	margin: .5vw .5vw .5vw .5vw;
-}
 
 .servs {
 	background-color: white;
@@ -95,7 +144,7 @@ body {
 	margin-top: 5px;
 	width: 100%;
 	text-align: justify;
-}
+	}
 
 
 .logo {
@@ -111,6 +160,21 @@ body {
 	padding: 10px 5px 10px 5px;
 	}
 
+.blank {
+	background-color: inherit;
+	width: 100%;
+	height: 2px;
+	}
+
+.price {
+	display: block;
+	float: right;
+	margin-bottom: 2vw;
+	margin-top: 2vw;
+	font-size: 5.5vw;
+	}
+
+/*______________________Mobile __________________________*/
 .mobile-1 {
 	background-color: RGB(69, 200, 207);
 	font-size: 5.5vw;
@@ -147,7 +211,7 @@ body {
 
 .mobile-4 {
 	background-color: #ddd;
-	font-size: 4vw;
+	font-size: 5vw;
 	font-weight: bold;
 	text-shadow: 2px 2px 10px black;
 	color: White;
@@ -173,18 +237,8 @@ body {
 	border-bottom: 5px solid black;
 	}
 
-footer {
-	background-color: black;
-	height: 15px;
-	display: block;
-	color: white;
-	font-size: 4vw;
-	width: 100%;
-	height: auto;
-	padding: 15px 15px 15px 15px;
-	text-align: center;
-	}
-	
+
+
 /*------------------------Headers and Paragraphs----------------------------*/
 
 /*____________________________Headers_______________________________________*/
@@ -265,17 +319,12 @@ ul {
 	padding-left: 5%;
 	}
 
-ul.square {
-	font-size: 4vw;
-	text-align: justify;
-	padding-left: 10%;
-	list-style-type: square;
-	}
 
 li {
 	margin: 10px;
 	font-size: 4vw;
 	}
+
 
 /*------------------------------LINKS--------------------------------------*/
 
@@ -288,6 +337,8 @@ a:visited {
 a:hover{
 	color: teal;
 	}
+
+
 
 /*--------------------------------IMAGES----------------------------------*/
 img {
@@ -397,21 +448,22 @@ hr.style-one:after {
 
 .dropdown-content {
 	font-weight: bold;
-	display: none;
 	position: absolute;
 	background-color: #f9f9f9;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-    	min-width: 160px;
+	z-index: 9999;
+    	width: auto;
+	display: none;
+	text-align: left;
 	}
 
 .dropdown-content a {
-	float: none;
 	color: black;
-	padding: 12px 50px 5px 50px;
+	padding: 12px 50px 5px 10px;
 	text-decoration: none;
 	display: block;
 	text-align: left;
+	line-height: 5vw;
 	}
 
 .dropdown-content a:hover {
@@ -422,31 +474,34 @@ hr.style-one:after {
 	display: block;
 	}
 
+/*____________________________________SIDE NAV______________________________________*/
+
+
 .ServNav{
-	width: 450px;
-	height: 300px;
-	float: right;
-	background-color: black;
-	padding-top: 16px;
+	background-color: inherit;
+	padding-top: 1vw;
 	text-align: center;
-	border: 4px solid white;
-	margin-left: 72%;
 	position: fixed;
+	width: 21vw;
+	line-height: 3vw;
 }
 
 .ServNav a {
-    padding: 8px 8px 8px 20px;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    text-decoration: none;
-    font-size: 25px;
-    color: white;
-    display: block;
-    transition: 0.3s;
+    	padding: 8px 8px 8px 20px;
+    	font-family: Georgia, "Times New Roman", Times, serif;
+    	text-decoration: none;
+    	font-size: 1.5vw;
+   	color: black;
+    	display: block;
+	text-shadow: 3px 3px 10px white;
 }
 .ServNav a:hover {
     color: RGB(69, 200, 207);
     font-style: italic;
 }
+
+
+
 
 /*----------------------------Screen Sizing --------------------------------*/
 
@@ -466,9 +521,18 @@ p.important {
 	font-size: 3vw;
 	}
 
-.ServNav {
+.ServNav, .sidebar-area, .blank {
 	display: none;
 	}
+
+.content-area {
+	width: 100%;
+	}
+
+.site-main {
+	width: 100%;
+	}
+
 .navbar {
 	overflow: hidden;
 	background-color: white;
@@ -589,6 +653,7 @@ p.small {
 .ServNav {
 	display: none;
 	}
+
 }
 
 
@@ -606,13 +671,21 @@ p.small {
 
   	}
 
+.feature-4 {
+	width: 30%;
+	font-size: 2vw;
+	text-align: center;
+	height: auto;
+	margin-left: 13.33% 
+	
+	}
+
 .header {
 	height: auto;
 	width: 50%;
-	margin-left: 25vw;
-	margin-right: 25vw;
-	margin-bottom: .5vw;
-	margin-top: 1vw;
+	margin: auto;
+	margin-top: .25vw;
+	margin-bottom: .25vw;
 	border: 4px double RGB(69, 200, 207);
   	}
 
@@ -634,7 +707,7 @@ p.small {
 	}
 
 .servs {
-	margin: 1vw .5vw .5vw 5vw;
+	margin: auto;
 	padding: .5vw .5vw .5vw .5vw;
 	width: 60%;
 	font-size: 1.5vw;
@@ -673,6 +746,10 @@ p.small {
 	width: 10vw;
 	}
 
+.dropdown-content a {
+	line-height: 3vw;
+	}
+
 .mobile-1 {
 	display: none;
 	}
@@ -692,6 +769,7 @@ p.small {
 	padding-left: 1.5vw;
 	padding-right: 1.5vw;
 	color: Black;
+	height: auto;
 	}
 
 .mobile-3 {
@@ -710,7 +788,7 @@ p.small {
 	width: 60%;
 	background-color: inherit;
 	border: none;
-	margin-left: 5vw;
+	margin: auto;
 	text-align: center;
 	font-size: 3vw;
 	}
@@ -738,7 +816,7 @@ h2 {
 	color: black;
 	text-shadow: none;
 	text-align: left;
-	margin-left: 1.5vw;
+	margin: 1.4vw;
 
 	}
 h3 {
@@ -785,6 +863,11 @@ p.pricing {
 
 .mobile-pic {
 	display: none;
+	}
+
+.price {
+	font-size: 3vw;
+	margin-top: 0;
 	}
 	
 }
