--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
 	background-color: white;
 	border: none;
 	padding: 20px 10px 20px 10px;
-	height: 60px;
+	height: auto;
 	width: 100%;
 	margin: auto;
 	margin-bottom: .5vw;
@@ -82,7 +82,6 @@ footer {
 	margin: auto;
 	height: 10%;
 	margin-bottom: 3px;
-	margin-top: 3px;
 	}
 
 .feature-2 {
